--- a/second.html
+++ b/second.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janin sivu!</title>
-    <link rel="stylesheet" href="/intro-to-vscode/styles.css">
+    <link rel="stylesheet" href="styles.css">
    <style>
         h1{
             border: 2px dashed;
@@ -21,9 +21,9 @@
  
 <nav>
     <ul class="nav-bar">
-        <li class="li-nav"><a href="/intro-to-vscode/index.html">Index</a></li>
-        <li class="li-nav"><a href="/intro-to-vscode/second.html">Second</a></li>
-        <li class="li-nav"><a href="/intro-to-vscode/third.html">Third</a></li>
+        <li class="li-nav"><a href="index.html">Index</a></li>
+        <li class="li-nav"><a href="second.html">Second</a></li>
+        <li class="li-nav"><a href="third.html">Third</a></li>
     </ul>
 </nav>
 
