--- a/index.html
+++ b/index.html
@@ -1,47 +1,215 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janin sivu!</title>
-    <link rel="stylesheet" href="styles.css">
-    
-</head>
+<!doctype html>
+<html lang="fi">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
+    <title>Vastuulliset lastenvaatteet</title>
+    <meta name="description" content="Täältä löydät vinkkejä sellaisista lastenvaatteiden valmistajista ja tuottajista, jotka antavat erityistä huomiota vastuullisuudelle osana vaatteiden valmistusta sekä markkinointia.">
+  </head>
 <body>
-
-<header>
-    <h1>Janin nettisivu</h1>
+    <header class="border">
+    <nav class=" navbar-expand{-sm|-md|-lg|-xl|-xxl}">
+        <div class="row">
+            <div class="col-sm-4"> 
+                <a id="header-logo" href="index.html" > <strong>VASTUULLISET LASTENVAATTEET</strong> </a>
+            </div>
+            <div class="col-sm-2"></div> 
+            <div class="col-sm-2 "> 
+                <a class="btn btn-secondary btn-block" href="second.html" >Käytetyt lastenvaatteet</a>
+            </div>
+            <div class="col-sm-2 "> 
+                <a class="btn btn-secondary btn-block" href="third.html" >Lisätietoja merkinnöistä</a>
+            </div>
+            <div class="col-sm-2"> 
+                <a class="btn btn-secondary btn-block" href="tableform.html" >Tietoa sivustosta</a>
+            </div>
+        </div>
+    </nav>
 </header>
-
-<nav>
-    <ul class="nav-bar">
-        <li class="li-nav"><a href="index.html">Index</a></li>
-        <li class="li-nav"><a href="second.html">Second</a></li>
-        <li class="li-nav"><a href="third.html">Third</a></li>
-    </ul>
-</nav>
-
-    <section>
-        <h2>Tässä ensimmäisen osion otsikko!</h2>
-        <p>Tähän tekstiä ensimmäiseen kolumniin. Tässä voitaisi kertao mistä tässä sivussa on kyse ja mitä täältä on tarkoitus löytää.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nihil corrupti dolor? Recusandae libero soluta aliquam voluptate incidunt? Accusamus nobis cupiditate aperiam dolorum doloremque, alias illo laudantium in inventore natus.</p>
-        <img src="DSC_1283.JPEG" alt="Kuva sillasta" width="68%">
-            <aside>
-            <h2>Tässä Aside-osion otsikko</h2>
-            <p>Tässä kerrotaan lisätietoja kuvasta, joka näkyy samassa tasossa tämän osion kanssa. Laatikossa kerrotaan kuvauspaikasta sekä siitä
-                miten kuvaa on käsitelty ja miksi se on rajattu näin.
+<div class="row hero-image" >
+        <div class="col-sm-12 centered hero-text">
+          <p class="centered">Sivusto sisältää affiliate-linkkejä. Linkit merkitty *-merkillä.</p>
+          <h1>Vastuulliset lastenvaatteet</h1> 
+        </div>
+</div>
+<div class="row padded">
+        <div class="col-sm-12 centered ">
+            <h2>Täältä löydät vastuulliset vaatteet
+            </h2>
+            <p>Lastenvaatteiden ostaminen vastuullisesti voi olla hankalaa ja aikaa vievää, jos haluaa selvittää tarkemmin, mitä vaatemerkin takaa löytyy. Tälle sivustolle on koottu sellaisia vaatevalmistajia, jotka ovat kertoneet kotisivuillansa vaatteidensa läpinäkyvästä tuotannosta ja muista toimista, joilla he pyrkivät sekä ekologisesti että sosiaalisesti kestävämpään lastenvaatetuotantoon. Nämä yritykset ovat pohjoismaisia ja niiden vaatetuotanto keskittyy pääosin Eurooppaan. 
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos maiores sequi aut laborum aperiam vero repudiandae dolore nulla fuga molestias. Quaerat expedita nam illo tenetur itaque magni ducimus officiis blanditiis!</p>
-            </aside>
-    <p>tähän lisää tekstiä</p>
-        <p>tähän kolmas tekstipalkki</p>
-    
-    </section>
-    <Footer>
-        <p>Footteri</p>
-    </Footer>
+            <p>Näille yrityksille lastenvaatteiden tuotanto tarkoittaa ajattomuutta ja laadukkuutta sekä kunnianhimoisia tavotteita kestävämmän tulevaisuuden suhteen. Linkin kautta pääset tutustumaan tarkemmin yksittäisen yrityksen vastuullisuusraportointiin. 
+            </p>
+        </div>
+</div>
+<hr>
+<div class="row padded">
+        <div class="col-sm-12 centered ">
+            <a href="https://ion.papustories.fi/t/t?a=1492648192&as=1694970193&t=2&tk=1" target="_blank" ><img src="https://track.adtraction.com/t/t?a=1492648192&as=1694970193&t=1&tk=1&i=1" alt="Mainoskuva" width="400" height="333"></a>
+            </div>
+            <p class="centered">*mainos</p>
+</div>
+<hr>
+<div class="container centered">
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
+      <div class="col">
+        <h2>Aarre</h2> 
+        <p>Pirkanmaalaisen yrityksen vaatteista pääosa valmistetaan Portugalissa, sukat valmistetaan Italiassa.</p>
+        <p>Puuvillatuotteissa käytetään pääasiassa  luomupuuvillaa ja neuleissa merinovillaa. Polyesterituotteet ovat pääosin kierrätettyjä.</p>    
+        <p>Yrityksellä löytyy valikoimasta erilaisia sisävaatteita, asusteita sekä ulkotakkeja.</p>    
+        <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+      </div>
+    <div class="col">
+        <h2>Blaa</h2>
+        <p>Blaan tuotteet valmistetaan Euroopassa, pääasiassa Portugalissa. Tuotantoa on myös Ukrainassa ja Suomessa.</p>
+        <p>Vaatteet valmistetaan enimmäkseen luomupuuvillasta, joka tulee Turkista. Materiaaleina käytetään myös muita luonnonmateriaaleja sekä lyocellia ja viskoosia.</p>    
+        <p>Yrityksellä on Design from Finland-merkki sekä joillain mallistoilla on myös Avainlippu-merkki.</p>    
+        <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+      </div>
+    <div class="col">
+        <h2>Gugguu</h2>
+        <p>Gugguun neuletuotteet valmistetaan Suomessa ja muut tuotteet Euroopassa. Kankaat tulevat Suomesta ja muualta Euroopasta.</p>
+        <p>Vaatteissa käytetään enimmäkseen luomupuuvillaa. Ulkovaatteet ovat osittain kierrätettyä polyesteriä/polyesteriä.</p>
+        <p>Gugguu valmistaa sisävaatteita, ulkovaatteita sekä (merinovillaisia)asusteita.</p>
+        <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+      </div>
+    </div>
 
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
+        <div class="col">
+            <h2>Hilla Clothing</h2> 
+            <p>Hillan tuotteet on suunniteltu Suomessa ja ne valmistetaan Jyväskylän omassa ompelimossa.</p>
+            <p>Vaatteissa käytetään 100 % luomupuuvillaa. Valikoimasta löytyy sisävaatteita ja asusteita.</p>    
+            <p>Yrityksellä on Avainlippu-merkki.</p>    
+            <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+          </div>
+        <div class="col">
+            <h2>Hupi</h2>
+            <p>Hupi on suomalainen lastenvaatemerkki, joka suunnittelee ja valmistaa vaatteensa Ulvilassa.</p>
+            <p>Vaatteiden pääasiallinen materiaali on luonnonkuidut kuten luomupuuvilla. Hupilta löytyy monipuolisesti sisävaatteita sekä asusteita.</p>    
+            <p>Yrityksellä on sekä Design from Finland että Avainlippu-merkki.</p>    
+            <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+          </div>
+        <div class="col">
+            <h2>Ihana</h2>
+            <p>Ihanan vaatteet ovat kotimaista tuotantoa. Ne suunnitellaan sekä valmistetaan Suomessa. Luomupuuvilla tuotetaan Turkissa.</p>
+            <p>Ihanalta löytyy luomupuuvillaisia sisävaatteita.</p>
+            <p>Yrityksellä on sekä Design from Finland että Avainlippu-merkki.</p>
+            <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+          </div>
+    </div>
+  
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
+        <div class="col">
+          <h2>Kivat</h2> 
+          <p>Kivatin tuotteet valmistuvat langasta lähtien Tampereella. Raaka-aineet tulevat Euroopasta.</p>
+          <p>Vaatteissa käytetään luonnonmateriaaleja kuten luomupuuvillaa, merinovillaa ja silkkiä.</p>    
+          <p>Valikoimasta löytyy villahaalareita, -takkeja ja -housuja sekä erilaisia asusteita.</p>    
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+      <div class="col">
+          <h2>Kaiko</h2>
+          <p>Kaikon vaatteista valtaosa valmistuu Portugalissa suomalaisomisteisessa tehtaassa. Kangas myös kudotaan ja värjätään Portugalissa. Sukkahousut tulevat Italiasta. Suomessa Tampereella valmistuu iso osa Kaikon merinovilla-asusteista.</p>
+          <p>Vaatteiden materiaalina suositaan luonnonkuituja ja biohajoavia muuntokuituja kuten lyocellia.</p>    
+          <p>Kaikolta löytyy kattavasti sisävaatteita ja asusteita. </p>    
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+      <div class="col">
+          <h2>Lumoan</h2>
+          <p>Lumoan on suomalainen yritys, joka suunnittelee vaatteet Suomessa. Yrityksen vaatteet valmistetaan Virossa ja Liettuassa. Materiaalit tulevat eurooppalaisilta toimittajilta.</p>
+          <p>Vaatteissa suositaan luonnonmateriaaleja ja enenevässä määrin myös kierrätyskuituja. Polyesteriä käytetään vain kierrätettynä.</p>
+          <p>Valikoimassa on lähinnä mekkoja, jotka on suunniteltu mätsäämään aikuisten vaatteisiin.</p>
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+    </div>
 
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
+        <div class="col">
+          <h2>Melli EcoDesign</h2> 
+          <p>Vaatteet suunnitellaan ja ommellaan Suomessa, Jyväskylässä. Kankaista suurin osa tulee Suomesta.</p>
+          <p>Melli EcoDesignin vaatteet tehdään luonnon- ja kierrätysmateriaaleista esimerkiksi luomupuuvillasta.</p>    
+          <p>Valikoimasta löytyy monipuolisesti sisävaatteita sekä erilaisia asusteita.</p>
+          <p>Yrityksellä on Avainlippu-merkki.</p>  
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+      <div class="col">
+          <h2>Metsola</h2>
+          <p>Metsolan tuotteet valmistetaan Suomessa, Virossa, Latviassa ja Puolassa.</p>
+          <p>Vaatteissa käytetään enimmäkseen luomupuuvillaa ja merinovillaa.</p>
+          <p>Valikoimasta löytyy laajasti sisävaatteita ja asusteita.</p> 
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+      <div class="col">
+          <h2>Paapii</h2>
+          <p>Sisävaatteita valmistava Paapii suunnittelee ja valmistaa tuotteensa Kokkolassa ja Kalajoella. Kankaat neulotaan Liettuassa ja  Tanskassa.</p>
+          <p>Vaatteet on tehty luomupuuvillasta tai merinovillasta.</p>
+          <p>Yrityksellä on Avainlippu-merkki.</p>
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+    </div>
+
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
+        <div class="col">
+          <h2>Papu Design</h2> 
+          <p>Papun tuotteet suunnitellaan Suomessa ja valmistetaan Euroopassa. Merkittävä osa vaatteista tuotetaan Liettuassa sekä Portugalissa.</p>
+          <p>Yritys käyttää enimmäkseen luomupuuvillaa, mutta myös muita materiaaleja kuten merinovillaa, lyocelliä ja pellavaa.</p>    
+          <p>Papulta löytyy valikoimasta sisävaatteita ja asusteita.</p>
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+      <div class="col">
+          <h2>Polarn O. Pyret</h2>
+          <p>Polarn O. Pyret on ruotsalainen lasten sisä- ja ulkovaatteita valmistava yritys. PO.P:illa on myös oma second hand -palvelu myymälöissä.</p>
+          <p>Yritys valmistaa vaatteita enimmäkseen Aasiassa kuten Bangladeshissa ja Kiinassa, mutta pyrkii edistämään sosiaalista vastuutaan Amfori BSCI hankkeessa ja minimoimaan lentokuljetukset.</p>
+          <p>Sisävaatteet valmistetaan enimmäkseen luomupuuvillasta , joista puolet on GOTS-sertifioitu. Suurin osa fleece-vaatteista ja kaikki uima-asut on tehty kierrätetyistä materiaaleista. Ulkovaatteissa käytetään myös kierrätettyjä materiaaleja mahdollisimman paljon.</p> 
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+      <div class="col">
+          <h2>Sohvila</h2>
+          <p>Mynämäkeläisen yrityksen tuotteita valmistetaan kotipaikkakunnan lisäksi myös Kustavissa ja Turussa.</p>
+          <p>Vaatteiden valmistukseen käytetään 100 % luonnonmateriaaleja.</p>
+          <p>Valikoimasta löytyy mm. pipoja, pellavavaatteita, asusteita sekä neulevaatteita.</p>
+          <p>Yrityksellä on Avainlippu-merkki.</p> 
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+    </div>
+
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2">
+        <div class="col">
+          <h2>Verson Puoti</h2> 
+          <p>Verson puodin vaatteet suunnitellaan Suomessa ja valmistetaan Euroopassa kuten Virossa sekä Suomessa. Kankaat tulevat Suomesta, Liettuasta ja Puolasta.</p>
+          <p>YritSuurin osa vaatteista on tehty luomupuuvillasta.</p>    
+          <p>Valikoimasta löytyy monipuolisesti erilaisia sisävaatteita sekä merinovillapipoja.</p>
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+      <div class="col">
+          <h2>Viljava design</h2>
+          <p>Viljavan vaatteet suunnitellaan Etelä-Pohjanmaalla ja valmistetaan myös Suomessa.</p>
+          <p>Valikoimassa on erilaisia trikoisia (puuvilla 94%, elastaani 6%) sisävaatteita ja asusteita.</p>
+          <p>Yrityksellä on sekä Design from Finland että Avainlippu-merkki.</p> 
+          <a class="btn-primary company-info" href="https://www.google.fi" target="_blank">Lisätietoja vastuullisuudesta</a>
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-4">VASTUULLISET LASTENVAATTEET</div>
+          <div class="col-sm-4"></div>
+          <div class="col-sm-4">
+              <a href="https://www.instagram.com/vastuullisetlastenvaatteet" target="_blank">
+              <img class="logo" src="/ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
+              </a>
+          </div>
+      </div>
+  </div>
+</footer>  
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
 </body>
 </html>
