--- a/second.html
+++ b/second.html
@@ -1,53 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janin sivu!</title>
-    <link rel="stylesheet" href="styles.css">
-   <style>
-        h1{
-            border: 2px dashed;
-        }
-    
-   </style>
-</head>
-<body>
-
-<header> 
-    <h1>Janin nettisivu</h1> 
+<!doctype html>
+<html lang="fi">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
+    <title>Käytetyt lastenvaatteet - Vastuulliset lastenvaatteet</title>
+    <meta name="description" content="Käytetyt lastenvaatteet ovat aina ekologisin vaihtoehto.">
+  </head>
+ <body>
+ <header class="border">
+    <nav class=" navbar-expand{-sm|-md|-lg|-xl|-xxl}">
+        <div class="row">
+            <div class="col-sm-4"> 
+                <a id="header-logo" href="index.html" > <strong>VASTUULLISET LASTENVAATTEET</strong> </a>
+            </div>
+            <div class="col-sm-2"></div> 
+            <div class="col-sm-2 "> 
+                <a class="btn btn-secondary btn-block" href="second.html" >Käytetyt lastenvaatteet</a>
+            </div>
+            <div class="col-sm-2 "> 
+                <a class="btn btn-secondary btn-block" href="third.html" >Lisätietoja merkinnöistä</a>
+            </div>
+            <div class="col-sm-2"> 
+                <a class="btn btn-secondary btn-block" href="tableform.html" >Tietoa sivustosta</a>
+            </div>
+        </div>
+    </nav>
 </header>
- 
-<nav>
-    <ul class="nav-bar">
-        <li class="li-nav"><a href="index.html">Index</a></li>
-        <li class="li-nav"><a href="second.html">Second</a></li>
-        <li class="li-nav"><a href="third.html">Third</a></li>
-    </ul>
-</nav>
-
-
-<section>
-    <p class="centered"> <strong>Tässä on sivulle ingressi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit perspiciatis animi vel incidunt a! Mollitia tenetur officiis consequatur veritatis nesciunt vel non! Illum ipsam, totam aliquid nobis fugiat dolores.</strong></p>
-    <h2>Tällä sivulla on valokuvia!</h2>
-    <img class="img-float-right" src="DSC_1283.JPEG" alt="kuva sillasta" width="600" >
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum neque dolorum tempore voluptates quas voluptate quae esse molestias necessitatibus eveniet, commodi vero aliquid nostrum ipsum provident magni nesciunt porro exercitationem?</p>
-
-    <p>Tässä on kuvattu miten valokuvia on otettu ja mitä niillä halutaan kertoa. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-        Deleniti perferendis consequatur quo praesentium molestias magnam eum alias, a, iure dignissimos dolor tempora possimus vitae eaque,
-         repellat asperiores non ipsum repellendus.</p> 
-    <figure>
-        <img src="DSC_4163.jpg" alt="Kuva metsästä jossa nosturi" width="100%">
-        <figcaption>Kuva 1, kuva sillasta</figcaption>
-    </figure>
-
-<label for="file">Lataus on käynnissä:</label>
-
-<progress id="file" max="100" value="70"> 70% </progress>
-
-<figure></figure>
-</section>
-</body>
+    <div class="row hero-image">
+        <div class="col-sm-12 centered hero-text">
+            <p class="centered">Sivusto sisältää affiliate-linkkejä. Linkit merkitty *-merkillä.</p>
+            <h1>Käytetty lastenvaate on aina ekologisin</h1>
+                    </div>
+    </div>
+<div>
+    <p class="centered" style="padding-left: 20%; padding-right: 20%;"><strong>Käytetyt lastenvaatteet</strong> päihittävät uudet vaatteet ekologisuudessa ja ympäristöystävällisyydessä. Varsinkin pienempien vaatteet saattavat olla käytössä vain vähän aikaa, jolloin käyttökertoja ei ehdi kertyä juuri ollenkaan ja vaatteen kunto voi olla uudenveroinen. Alla on listattu nettikirppiksiä, joista löytyy lastenvaatteille omat kategoriat ja niiden etsiminen on kätevämpää.</p>
+ </div>
+<div class="container">
+        <div class="row">
+            <div class="col-sm-12 centered padded">
+                <a href="https://at.polarnopyret.fi/t/t?a=1714248024&as=1694970193&t=2&tk=1&url=https%3A%2F%2Fwww.polarnopyret.fi%2Fpop-cares%2Fvaatteiden-kayttoika%2Fpop-second-hand" target="_blank"><h2>PO.P Second Hand*</h2></a>
+            </div>
+            <div class="col-sm-4 centered padded">
+                <a href="https://store.emmy.fi/lapset" target="_blank"><h2>Emmy</h2></a>
+            </div>
+            <div class="col-sm-4 centered padded">
+                <a href="https://vahankaytetty.fi/lasten-vaatteet.html" target="_blank"><h2>Vähänkäytetty</h2></a>
+            </div>
+            <div class="col-sm-4 centered padded">
+                <a href="https://rekki.fi/kategoria/lapset/" target="_blank"><h2>Rekki</h2></a>
+            </div>
+            <div class="col-sm-4 centered padded">
+                <a href="https://www.herttala.fi/category/44/lapset" target="_blank"><h2>Herttala</h2></a>
+            </div>
+            <div class="col-sm-4 centered padded">
+                <a href="https://miima.fi/collections/lapset" target="_blank"><h2>Miima</h2></a>
+            </div>
+            <div class="col-sm-4 centered padded">
+                <a href="https://ninyes.fi/collections/kids/" target="_blank"><h2>Ninyes</h2></a>
+            </div>
+        </div>
+</div>
+    <div class="container centered">
+        <div class="row">
+                <div class="col-sm-12 centered">
+                    <a href="https://at.polarnopyret.fi/t/t?a=1722437305&amp;as=1694970193&amp;t=2&amp;tk=1" target="_blank">
+                    <img src="https://track.adtraction.com/t/t?a=1722437305&amp;as=1694970193&amp;t=1&amp;tk=1&amp;i=1" alt="Mainoslinkki">
+                    </a>
+                </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">VASTUULLISET LASTENVAATTEET</div>
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                    <a href="https://www.instagram.com/vastuullisetlastenvaatteet" target="_blank">
+                    <img class="logo" src="/ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
+                    </a>
+                </div>
+            </div>
+        </div>
+      </footer>  
+          </body>
 </html>
