--- a/third.html
+++ b/third.html
@@ -1,46 +1,131 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janin sivu!</title>
-    <link rel="stylesheet" href="styles.css">
-    
-</head>
-<body>
-
-<header>
-    <h1>Janin nettisivu</h1>
+<!doctype html>
+<html lang="fi">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
+    <title>Vaateiden vastuullisuusmerkinnät - Vastuulliset lastenvaatteet</title>
+    <meta name="description" content="Erilaiset merkinnät vaatteissa voivat herättää hämmennystä. Katso tästä miten ne saadaan esitettyä yksinkertaisesti!">
+  </head>
+  <body>
+<header class="border">
+       <nav class=" navbar-expand{-sm|-md|-lg|-xl|-xxl}">
+           <div class="row">
+               <div class="col-sm-4"> 
+                   <a id="header-logo" href="index.html" > <strong>VASTUULLISET LASTENVAATTEET</strong> </a>
+               </div>
+               <div class="col-sm-2"></div> 
+               <div class="col-sm-2 "> 
+                   <a class="btn btn-secondary btn-block" href="second.html" >Käytetyt lastenvaatteet</a>
+               </div>
+               <div class="col-sm-2 "> 
+                   <a class="btn btn-secondary btn-block" href="third.html" >Lisätietoja merkinnöistä</a>
+               </div>
+               <div class="col-sm-2"> 
+                   <a class="btn btn-secondary btn-block" href="tableform.html" >Tietoa sivustosta</a>
+               </div>
+           </div>
+       </nav>
 </header>
+    <div class="row hero-image">
+        <div class="col-sm-12 centered hero-text">
+            <p class="centered">Sivusto sisältää affiliate-linkkejä. Linkit merkitty *-merkillä.</p>
+            <h1>Lisätietoja vaatemarkkinoinnissa käytettävistä merkinnöistä ja standardeista</h1>
+        </div>
+    </div>
+<div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <img class="full-width rounded-circle" src="/vastuullisetlastenvaatteet-05.jpg" alt="Lapsi ja äiti puun takana joen varrella">
+            </div>
+            <div class="col-sm-8">
+                <h2>Öko-Tex 100</h2>
+                <p>Öko-Tex-standardi 100 on kansainvälinen sertifiointijärjestelmä joka takaa, ettei tuotteessa eikä sen tuotantoketjussa ole tiettyjä haitta-aineiksi katsottavia kemikaaleja, tai raskasmetalleja.</p>
+                <a class="btn btn-outline-secondary" href="https://www.oeko-tex.com/en/our-standards/standard-100-by-oeko-tex">Lisätietoja Öko-Tex 100-sertifioinnista täältä</a>
+            </div>
+        </div>
+</div>
+<div class="container">
+        <div class="row">
+            <div class="col-sm-8 right">
+                <h2>GOTS-sertifikaatti</h2>
+                <p>GOTS-sertifioidusta materiaaleista (Global Organic Textile Standard) valmistettu tuote sisältää vähintään 70 % luomupuuvillaa. Sekä Öko-Tex 100 että GOTS-standardi ulottuvat koko tuotantoketjuun aina raaka-aineen viljelystä tuotteen viimeistelyyn. GOTS Organic-merkinnällä varustetut tekstiilituotteet sisältävät vähintään 95 % luonnonkuituja.
+                </p>
+                <a class="btn btn-outline-secondary" href="https://global-standard.org/">Lisätietoja GOTS-sertifioinnista täältä</a>
+            </div>
+            <div class="col-sm-4">
+                <img class="full-width" src="/vastuullisetlastenvaatteet-17.jpg" alt="Vuoristomaisema jossa etualalla puita ja vuorten välissä meri">
+            </div>
+        </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <img class="full-width" src="/vastuullisetlastenvaatteet-11.jpg" alt="Villejä lampaita laiduntamassa vuoren juurella">
+        </div>
+        <div class="col-sm-8">
+            <h2>Mulesing-vapaa merinovilla</h2>
+            <p>Mulesing-vapaa merinovillan tuotanto takaa, ettei lampaille tehdä mulesing -toimenpidettä, joka aiheuttaa lampaille kärsimystä. Mulesing-vapaat merinovillatuotteet tunnistat helpoiten “Mulesing Free Merinowool” tai “NO MULESING” merkinnöistä.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8 right">
+            <h2>BCI-sertifioitu puuvilla</h2>
+            <p>BCI, eli Better Cotton Initiative-puuvillatuotteiden standardijärjestelmä edistää puuvillan viljelyn ja tuotannon kestävyyttä sekä luonnollisempia toimintatapoja.</p>
+            <a class="btn btn-outline-secondary" href="https://bettercotton.org/">Lisätietoja BCI-sertifioinnista täällä</a>
+        </div>
+        <div class="col-sm-4">
+            <img class="full-width rounded-circle" src="/vastuullisetlastenvaatteet-04.jpg" alt="Voikukan siemeniä vielä kiinni kukan varressa vihreällä sumennetulla taustalla">
+        </div>
 
-<nav>
-    <ul class="nav-bar">
-        <li class="li-nav"><a href="index.html">Index</a></li>
-        <li class="li-nav"><a href="second.html">Second</a></li>
-        <li class="li-nav"><a href="third.html">Third</a></li>
-    </ul>
-</nav>
-    <section class="sidebar-style">
-                    <h2 class="centered">Sivuvalikko</h2>
-        <ul class="sidebar-list">
-            <li><a href="https://www.vastuullisetlastenvaatteet.com" target="_blank">Vastuulliset lastenvaatteet</a></li>
-            <li><a href="https://www.osao.fi" target="_blank">Koulutuskuntayhtymä OSAO</a></li>
-        </ul>
-    </section>
-        <section>
-            <h2>Kolmannen sivun ensimmäinen otsikko!</h2>
-            <p>Tästä se taas lähtee! Tälle sivulle ei varmasti kirjoiteta mitään syvällistä tekstiä, mutta aina sitä jotain on hyvä olla.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique nihil obcaecati vero et veritatis necessitatibus mollitia minima libero incidunt doloremque dolorum, quod, laborum minus sequi dolore ipsum. Soluta, eum inventore?</p>
-            <img src="DSC_1283.JPEG" alt="Kuva sillasta" width="65%">
-            <aside>
-                <h2>Tässä Aside otsikko</h2>
-                <p>Tässä on tarkennettu vasemmalla olevan kuvan sanomaa.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum placeat fugiat perspiciatis sapiente repellat vel assumenda corrupti, animi iste tempore dolore iure consectetur, totam consequatur rem. Debitis cumque esse dignissimos.</p>
-            </aside>
-    </section>
-        <Footer>
-            <p>Footteri</p>
-        </Footer>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <img class="full-width" src="/TehtySuomMadeIn_Sin_rgb.png" alt="Avainlippu-merkki">
+        </div>
+        <div class="col-sm-8">
+            <h2>Avainlippu-merkki</h2>
+            <p>Avainlippu-merkki voidaan myöntää Suomessa valmistetuille tuotteille tai palveluille, jonka kotimaisuusaste on vähintään 50 %. Kotimaisuusasteessa huomioidaan kaikki tuotteeseen kohdistuvat kustannukset, kuten raaka-aineet, henkilöstökustannukset, tarvikkeet sekä muut välilliset kustannukset ja alihankinnan.</p>
+            <a class="btn btn-outline-secondary" href="https://suomalainentyo.fi/yrityksille/avainlippu/">Lisätietoa Avainlippu-merkistä täältä</a>
+        </div>
+
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8 right">
+            <h2>Design from Finland</h2>
+            <p>Design from Finland -merkki kertoo, että tuote tai palvelu on muotoiltu Suomessa ammattimaisesti, vastuullisesti ja käyttäjälähtöisesti. Yrityksen pääkonttorin tulee sijaita Suomessa ja niiden tulee viestiä avoimesti tuotantoketjunsa rakenteesta sekä valmistusmaasta.</p>
+            <a class="btn btn-outline-secondary" href="https://suomalainentyo.fi/yrityksille/design-from-finland/">Lisätietoja Design from Finland-merkistä täältä</a>
+        </div>
+        <div class="col-sm-4">
+            <img class="full-width" src="/DFF_merkki_RGB.png" alt="Design from Finland-logo">
+        </div>
+
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">VASTUULLISET LASTENVAATTEET</div>
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <a href="https://www.instagram.com/vastuullisetlastenvaatteet" target="_blank">
+                <img class="logo" src="/ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
+                </a>
+            </div>
+        </div>
+    </div>
+  </footer>  
 </body>
 </html>
