--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="col-sm-4"></div>
           <div class="col-sm-4">
               <a href="https://www.instagram.com/vastuullisetlastenvaatteet" target="_blank">
-              <img class="logo" src="/ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
+              <img class="logo" src="ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
               </a>
           </div>
       </div>
