--- a/second.html
+++ b/second.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Käytetyt lastenvaatteet - Vastuulliset lastenvaatteet</title>
     <meta name="description" content="Käytetyt lastenvaatteet ovat aina ekologisin vaihtoehto.">
   </head>
@@ -81,7 +81,7 @@
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
                     <a href="https://www.instagram.com/vastuullisetlastenvaatteet" target="_blank">
-                    <img class="logo" src="/ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
+                    <img class="logo" src="ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
                     </a>
                 </div>
             </div>
