--- a/third.html
+++ b/third.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Vaateiden vastuullisuusmerkinnät - Vastuulliset lastenvaatteet</title>
     <meta name="description" content="Erilaiset merkinnät vaatteissa voivat herättää hämmennystä. Katso tästä miten ne saadaan esitettyä yksinkertaisesti!">
   </head>
@@ -37,7 +37,7 @@
 <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <img class="full-width rounded-circle" src="/vastuullisetlastenvaatteet-05.jpg" alt="Lapsi ja äiti puun takana joen varrella">
+                <img class="full-width rounded-circle" src="vastuullisetlastenvaatteet-05.jpg" alt="Lapsi ja äiti puun takana joen varrella">
             </div>
             <div class="col-sm-8">
                 <h2>Öko-Tex 100</h2>
@@ -55,14 +55,14 @@
                 <a class="btn btn-outline-secondary" href="https://global-standard.org/">Lisätietoja GOTS-sertifioinnista täältä</a>
             </div>
             <div class="col-sm-4">
-                <img class="full-width" src="/vastuullisetlastenvaatteet-17.jpg" alt="Vuoristomaisema jossa etualalla puita ja vuorten välissä meri">
+                <img class="full-width" src="vastuullisetlastenvaatteet-17.jpg" alt="Vuoristomaisema jossa etualalla puita ja vuorten välissä meri">
             </div>
         </div>
 </div>
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <img class="full-width" src="/vastuullisetlastenvaatteet-11.jpg" alt="Villejä lampaita laiduntamassa vuoren juurella">
+            <img class="full-width" src="vastuullisetlastenvaatteet-11.jpg" alt="Villejä lampaita laiduntamassa vuoren juurella">
         </div>
         <div class="col-sm-8">
             <h2>Mulesing-vapaa merinovilla</h2>
@@ -79,7 +79,7 @@
             <a class="btn btn-outline-secondary" href="https://bettercotton.org/">Lisätietoja BCI-sertifioinnista täällä</a>
         </div>
         <div class="col-sm-4">
-            <img class="full-width rounded-circle" src="/vastuullisetlastenvaatteet-04.jpg" alt="Voikukan siemeniä vielä kiinni kukan varressa vihreällä sumennetulla taustalla">
+            <img class="full-width rounded-circle" src="vastuullisetlastenvaatteet-04.jpg" alt="Voikukan siemeniä vielä kiinni kukan varressa vihreällä sumennetulla taustalla">
         </div>
 
     </div>
@@ -87,7 +87,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <img class="full-width" src="/TehtySuomMadeIn_Sin_rgb.png" alt="Avainlippu-merkki">
+            <img class="full-width" src="TehtySuomMadeIn_Sin_rgb.png" alt="Avainlippu-merkki">
         </div>
         <div class="col-sm-8">
             <h2>Avainlippu-merkki</h2>
@@ -105,7 +105,7 @@
             <a class="btn btn-outline-secondary" href="https://suomalainentyo.fi/yrityksille/design-from-finland/">Lisätietoja Design from Finland-merkistä täältä</a>
         </div>
         <div class="col-sm-4">
-            <img class="full-width" src="/DFF_merkki_RGB.png" alt="Design from Finland-logo">
+            <img class="full-width" src="DFF_merkki_RGB.png" alt="Design from Finland-logo">
         </div>
 
     </div>
@@ -121,7 +121,7 @@
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
                 <a href="https://www.instagram.com/vastuullisetlastenvaatteet" target="_blank">
-                <img class="logo" src="/ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
+                <img class="logo" src="ig-logo.png" alt="logo jota klikkaamalla pääsee instagram-sivulle">
                 </a>
             </div>
         </div>
